--- a/modules/jdbc-pool/pom.xml
+++ b/modules/jdbc-pool/pom.xml
@@ -26,8 +26,8 @@
   </parent>
 
   <groupId>org.apache.tomcat</groupId>
-  <artifactId>jdbc-pool</artifactId>
-  <version>1.2-SNAPSHOT</version>
+  <artifactId>tomcat-jdbc</artifactId>
+  <version>10.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>jdbc-pool</name>
@@ -67,7 +67,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.5</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -89,8 +89,8 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.7</source>
+          <target>1.7</target>
           <optimize>true</optimize>
           <debug>true</debug>
           <showDeprecation>true</showDeprecation>
