--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,8 @@
   </parent>
 
   <groupId>org.apache.tomcat</groupId>
-  <artifactId>jdbc-pool</artifactId>
-  <version>1.2-SNAPSHOT</version>
+  <artifactId>tomcat-jdbc</artifactId>
+  <version>10.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>jdbc-pool</name>
