--- a/pom.xml
+++ b/pom.xml
@@ -19,13 +19,8 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>org.apache</groupId>
-    <artifactId>apache</artifactId>
-    <version>9</version>
-  </parent>
-
-  <groupId>org.apache.tomcat</groupId>
+  <!--<groupId>org.apache.tomcat</groupId> -->
+  <groupId>com.fathomdb</groupId>
   <artifactId>tomcat-jdbc</artifactId>
   <version>10.0-SNAPSHOT</version>
   <packaging>jar</packaging>
